manifests/applications/ingest/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: prowlarr
  name: prowlarr-prod-ingest-deployment
  namespace: ingest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  strategy: {}
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
      - image: docker.io/linuxserver/prowlarr
        name: prowlarr
        ports:
          - containerPort: 9696
            name: http
            protocol: TCP
        resources: {}
        volumeMounts:
        - name: data
          mountPath: /config
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: prowlarr-prod-ingest-pvc
