manifests/applications/ingest/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr-prod-ingest-svc
  namespace: ingest
spec:
  selector:
    app: prowlarr
  ports:
    - port: 9696
      targetPort: http
      name: http
      protocol: TCP
