manifests/applications/ingest/prowlarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr-prod-ingest-ingress
  namespace: ingest
spec:
  ingressClassName: nginx
  rules:
  - host: "prowlarr.cbxon.local"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: prowlarr-prod-ingest-svc
            port:
              number: 9696
